k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-devopsified
  labels:
    app: portfolio-devopsified
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-devopsified
  template:
    metadata:
      labels:
        app: portfolio-devopsified
    spec:
      containers:
      - name: portfolio
        image: ashrafxbilal/portfolio-devopsified:v1
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
