k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-devopsified-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bilalashraf.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-devopsified-service
            port:
              number: 80
